--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,25 +1,14 @@
 {
   "name": "dd-playground-codespace",
   "image": "mcr.microsoft.com/devcontainers/python:3.11",
-
   "postCreateCommand": [
-    "mkdir -p ~/.local/bin",
-    "echo 'export PATH=\"$HOME/.local/bin:$PATH\"' >> ~/.bashrc",
-    "export PATH=\"$HOME/.local/bin:$PATH\"",
-
-    "python -m pip install --upgrade pip",
-
-    "python -m pip install --no-cache-dir -r requirements.txt",
-    "python -m pip install -e .",
-
-    "python - <<'PY'\nimport importlib, sys; missing=[m for m in ('matplotlib','ipywidgets','jupyterlab') if importlib.util.find_spec(m) is None];\nassert not missing, f'Missing packages: {missing}';\nPY",
-
-    "python -m ipykernel install --user --name dd-playground --display-name 'Python 3.11 (dd-playground)'"
+    "pip install --upgrade --user pip",
+    "pip install --no-cache-dir --user -r requirements.txt",
+    "pip install --user -e .",
+    "python -m ipykernel install --user --name dd-playground --display-name 'Python 3.11 (dd-playground)'",
+    "python -c \"import importlib; missing=[m for m in ('jupyterlab','ipywidgets','matplotlib') if importlib.util.find_spec(m) is None]; assert not missing, f'Missing: {missing}'\""
   ],
-
-  "postStartCommand":
-    "python -m jupyterlab --ip 0.0.0.0 --port 8888 --ServerApp.token='' --ServerApp.password='' --no-browser &",
-
+  "postStartCommand": "python -m jupyterlab --ip 0.0.0.0 --port 8888 --ServerApp.token='' --ServerApp.password='' --no-browser &",
   "customizations": {
     "vscode": {
       "extensions": [
@@ -31,13 +20,12 @@
       }
     }
   },
-
   "features": {
     "ghcr.io/devcontainers/features/github-cli:1": {}
   },
-
-  "forwardPorts": [8888],
-
+  "forwardPorts": [
+    8888
+  ],
   "portsAttributes": {
     "8888": {
       "label": "JupyterLab",
