--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,8 @@
 {
   "name": "dd-playground-codespace",
   "image": "mcr.microsoft.com/devcontainers/python:3.11",
-  "postCreateCommand": "/bin/bash -c 'set -e && mkdir -p ~/.local/bin && echo \"export PATH=\\\"$HOME/.local/bin:$PATH\\\"\" >> ~/.bashrc && export PATH=\"$HOME/.local/bin:$PATH\" && python -m pip install --upgrade --user pip && python -m pip install --no-cache-dir --user -r requirements.txt && python -m pip install --user -e . && python -m ipykernel install --user --name dd-playground --display-name \"Python 3.11 (dd-playground)\" && python - <<\"PY\" import importlib, sys; missing=[m for m in (\"jupyterlab\",\"ipywidgets\",\"matplotlib\") if importlib.util.find_spec(m) is None]; assert not missing, f\"Missing: {missing}\" PY'",
-  "postStartCommand": "python -m jupyterlab --ip 0.0.0.0 --port 8888 --ServerApp.token='' --ServerApp.password='' --no-browser &",
+  "postCreateCommand": "pip install --upgrade pip && pip install -r requirements.txt && pip install -e . && python -m ipykernel install --name dd-playground --display-name 'Python 3.11 (dd-playground)'",
+  "postStartCommand": "jupyter lab --ip 0.0.0.0 --port 8888 --ServerApp.token='' --ServerApp.password='' --no-browser &",
   "customizations": {
     "vscode": {
       "extensions": [
@@ -17,9 +17,7 @@
   "features": {
     "ghcr.io/devcontainers/features/github-cli:1": {}
   },
-  "forwardPorts": [
-    8888
-  ],
+  "forwardPorts": [8888],
   "portsAttributes": {
     "8888": {
       "label": "JupyterLab",
