reworked devcontainer.json, attempt 10

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,11 @@
 {
   "name": "dd-playground-codespace",
   "image": "mcr.microsoft.com/devcontainers/python:3.11",
-  "postCreateCommand": "pip install --upgrade pip && pip install -r requirements.txt && pip install -e . && python -m ipykernel install --name dd-playground --display-name 'Python 3.11 (dd-playground)'",
+
+  "postCreateCommand": "pip install --upgrade pip && pip install -r requirements.txt && pip install -e . && python -m ipykernel install --user --name dd-playground --display-name 'Python 3.11 (dd-playground)'",
+
   "postStartCommand": "jupyter lab --ip 0.0.0.0 --port 8888 --ServerApp.token='' --ServerApp.password='' --no-browser &",
+
   "customizations": {
     "vscode": {
       "extensions": [
@@ -14,10 +17,13 @@
       }
     }
   },
+
   "features": {
     "ghcr.io/devcontainers/features/github-cli:1": {}
   },
+
   "forwardPorts": [8888],
+
   "portsAttributes": {
     "8888": {
       "label": "JupyterLab",
